[MOD-1621] RedLaser Android: updating RL SDK to 3.2.0

--- a/documentation/redlaser-titanium-to-native-mapping.html
+++ b/documentation/redlaser-titanium-to-native-mapping.html
@@ -81,6 +81,16 @@
 			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.EAN8</TD>
 		</TR>
 		<TR>
+			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_GS1DATABAR</TD>
+			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypeGS1DATABAR</TD>
+		</TR>
+		<TR>
+			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_GS1DATABAR_EXPANDED</TD>
+			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypeGS1DATABAR_EXPANDED</TD>
+		</TR>
+		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_ITF</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypeITF</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.ITF</TD>
@@ -89,6 +99,11 @@
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_NONE</TD>
 			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.NONE</TD>
+		</TR>
+		<TR>
+			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_PDF417</TD>
+			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypePDF417</TD>
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_QRCODE</TD>
@@ -103,7 +118,7 @@
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_STICKY</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypeSTICKY</TD>
-			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.STICKYBITS</TD>
+			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_UPCE</TD>
@@ -397,9 +412,24 @@
 			<TD ALIGN=LEFT VALIGN=TOP>enabledTypes.get/setEan8</TD>
 		</TR>
 		<TR>
+			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.scanGS1Databar</TD>
+			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>enabledTypes.get/setGS1Databar</TD>
+		</TR>
+		<TR>
+			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.scanGS1DatabarExpanded</TD>
+			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>enabledTypes.get/setGS1DatabarExpanded</TD>
+		</TR>
+		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.scanITF</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>scanITF</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>enabledTypes.get/setITF</TD>
+		</TR>
+		<TR>
+			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.scanPDF417</TD>
+			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>enabledTypes.get/setPDF417</TD>
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.scanQRCode</TD>
@@ -414,7 +444,7 @@
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.scanSticky</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>scanSTICKY</TD>
-			<TD ALIGN=LEFT VALIGN=TOP>enabledTypes.get/setSticky</TD>
+			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.scanUPCE</TD>
