Updated RedLaser iOS SDK to 3.5.2 (iOS) Added support for CODE93, PDF417 and GS1 Databar barcodes (iOS) Fixed bug where setting Codebar flag also changed EAN8 flag

--- a/ios/documentation/redlaser-titanium-to-native-mapping.html
+++ b/ios/documentation/redlaser-titanium-to-native-mapping.html
@@ -52,7 +52,7 @@
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_CODE93</TD>
-			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypeCODE93</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.CODE93</TD>
 		</TR>
 		<TR>
@@ -82,13 +82,13 @@
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_GS1DATABAR</TD>
-			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypeGS1DATABAR</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.GS1DATABAR</TD>
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_GS1DATABAR_EXPANDED</TD>
-			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypeGS1DATABAR_EXPANDED</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.GS1DATABAR_EXPANDED</TD>
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_ITF</TD>
@@ -102,8 +102,8 @@
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_PDF417</TD>
-			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypePDF417</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.PDF417</TD>
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_QRCODE</TD>
@@ -114,11 +114,6 @@
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_RSS14</TD>
 			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>BarcodeTypes.RSS14</TD>
-		</TR>
-		<TR>
-			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_STICKY</TD>
-			<TD ALIGN=LEFT VALIGN=TOP>kBarcodeTypeSTICKY</TD>
-			<TD ALIGN=LEFT VALIGN=TOP BGCOLOR="#969696">n/a</TD>
 		</TR>
 		<TR>
 			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>BARCODE_TYPE_UPCE</TD>
@@ -317,13 +312,13 @@
 			<TD ALIGN=LEFT VALIGN=TOP>doneScanning</TD>
 		</TR>
 		<TR>
-			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.isFlashAvailable</TD>
-			<TD ALIGN=LEFT VALIGN=TOP>hasFlash</TD>
+			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.isTorchAvailable</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>hasTorch</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>isTorchAvailable</TD>
 		</TR>
 		<TR>
-			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.turnFlash(boolean)</TD>
-			<TD ALIGN=LEFT VALIGN=TOP>turnFlash:(BOOL)value</TD>
+			<TD HEIGHT=16 ALIGN=LEFT VALIGN=TOP>RedLaser.turnTorch(boolean)</TD>
+			<TD ALIGN=LEFT VALIGN=TOP>turnTorch:(BOOL)value</TD>
 			<TD ALIGN=LEFT VALIGN=TOP>n/a</TD>
 		</TR>
 		<TR>
